--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "file-loader": "^6.2.0",
     "react": "^18.1.0",
     "react-router-dom": "^6.3.0",
+    "react-spinners-kit": "^1.9.1",
     "styled-components": "^5.3.5",
     "url-loader": "^4.1.1"
   },
